--- a/default.html
+++ b/default.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>//rebuild WinJS</title>
+    <base href="http://jeremylikness.github.io/RebuildWinJSWeb/"/>
 
     <!-- WinJS references -->
     <link href="/winjs/css/ui-light.css" rel="stylesheet" />
