--- a/default.html
+++ b/default.html
@@ -6,20 +6,20 @@
     <base href="http://jeremylikness.github.io/RebuildWinJSWeb/"/>
 
     <!-- WinJS references -->
-    <link href="/winjs/css/ui-light.css" rel="stylesheet" />
-    <script src="/winjs/js/base.js"></script>
-    <script src="/winjs/js/ui.js"></script>
+    <link href="winjs/css/ui-light.css" rel="stylesheet" />
+    <script src="winjs/js/base.js"></script>
+    <script src="winjs/js/ui.js"></script>
 
     <!-- RebuildWinJS references -->
-    <link href="/css/default.css" rel="stylesheet" />
-    <link href="/css/animate.css" rel="stylesheet" />
-    <script src="/js/data.js"></script>
-    <script src="/js/navigator.js"></script>
-    <script src="/js/bullets.js"></script>
-    <script src="/js/default.js"></script>    
+    <link href="css/default.css" rel="stylesheet" />
+    <link href="css/animate.css" rel="stylesheet" />
+    <script src="js/data.js"></script>
+    <script src="js/navigator.js"></script>
+    <script src="js/bullets.js"></script>
+    <script src="js/default.js"></script>    
 </head>
 <body>
-    <div id="contenthost" data-win-control="Application.PageControlNavigator" data-win-options="{home: '/pages/groupedItems/groupedItems.html'}"></div>
+    <div id="contenthost" data-win-control="Application.PageControlNavigator" data-win-options="{home: 'pages/groupedItems/groupedItems.html'}"></div>
     <!-- <div id="appbar" data-win-control="WinJS.UI.AppBar">
         <button data-win-control="WinJS.UI.AppBarCommand" data-win-options="{id:'cmd', label:'Command', icon:'placeholder'}" type="button"></button>
     </div> -->
