--- a/pages/itemDetail/itemDetail.html
+++ b/pages/itemDetail/itemDetail.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title>itemDetailPage</title>
 
-    <link href="/css/default.css" rel="stylesheet" />
-    <link href="/pages/itemDetail/itemDetail.css" rel="stylesheet" />
-    <script src="/js/data.js"></script>
-    <script src="/pages/itemDetail/itemDetail.js"></script>
+    <link href="/RebuildWinJSWeb/css/default.css" rel="stylesheet" />
+    <link href="/RebuildWinJSWeb/pages/itemDetail/itemDetail.css" rel="stylesheet" />
+    <script src="/RebuildWinJSWeb/js/data.js"></script>
+    <script src="/RebuildWinJSWeb/pages/itemDetail/itemDetail.js"></script>
 </head>
 <body>
     <!-- The content that will be loaded and displayed. -->
@@ -28,8 +28,8 @@
             </div>
             <p class="spacer-10"/>
             <div class="stretch-horizontal">
-                <a href="http://www.wintellect.com/" class="align-left" target="_blank"><img src="/images/winlogobl.gif" class="v-middle" /></a>
-                <a href="http://www.wintellectnow.com/" class="align-right" target="_blank"><img src="/images/winnow-logo-cropped.png" class="v-middle" /></a>
+                <a href="http://www.wintellect.com/" class="align-left" target="_blank"><img src="/RebuildWinJSWeb/images/winlogobl.gif" class="v-middle" /></a>
+                <a href="http://www.wintellectnow.com/" class="align-right" target="_blank"><img src="/RebuildWinJSWeb/images/winnow-logo-cropped.png" class="v-middle" /></a>
             </div>
         </section> 
         <div id="createAppBar" data-win-control="WinJS.UI.AppBar">
