--- a/slides/slide19.html
+++ b/slides/slide19.html
@@ -1,5 +1,5 @@
 ﻿<div class="stretch-horizontal">
-    <img src="/images/xbox/xbox.png" class="half block-center animated bounceInUp"/>
+    <img src="/RebuildWinJSWeb/images/xbox/xbox.png" class="half block-center animated bounceInUp"/>
     <div class="bar spacer-10 animated wobble"></div>
     <ul>
         <li id="s19one" class="win-type-x-large hidden">Keyboard</li>
@@ -12,4 +12,4 @@
     </ul>
     <div class="bar spacer-10 animated wobble"></div>
 </div>
-<script src="/js/slide19.js"></script>
+<script src="/RebuildWinJSWeb/js/slide19.js"></script>
