--- a/slides/slide20.html
+++ b/slides/slide20.html
@@ -1,3 +1,3 @@
 ﻿<div class="stretch-horizontal">
-    <img src="/images/xbox/support.png" class="full block-center animated flipInX"/>
+    <img src="/RebuildWinJSWeb/images/xbox/support.png" class="full block-center animated flipInX"/>
 </div>
