--- a/slides/slide21.html
+++ b/slides/slide21.html
@@ -1,5 +1,5 @@
 ﻿<div class="stretch-horizontal">
-    <img src="/images/xbox/xbox.png" class="half block-center animated bounceInUp" />
+    <img src="/RebuildWinJSWeb/images/xbox/xbox.png" class="half block-center animated bounceInUp" />
     <div class="bar spacer-10 animated wobble"></div>
     <ul>
         <li id="s21one" class="win-type-x-large hidden">You don't have to use WinJS</li>
@@ -11,4 +11,4 @@
     </ul>
     <div class="bar spacer-10 animated wobble"></div>
 </div>
-<script src="/js/slide21.js"></script>
+<script src="/RebuildWinJSWeb/js/slide21.js"></script>
