--- a/slides/slide24.html
+++ b/slides/slide24.html
@@ -12,4 +12,4 @@
     </ul>
     <div class="bar spacer-10 animated wobble"></div>
 </div>
-<script src="/js/slide24.js"></script>
+<script src="/RebuildWinJSWeb/js/slide24.js"></script>
