--- a/slides/slide26.html
+++ b/slides/slide26.html
@@ -1,9 +1,9 @@
 ﻿<div class="stretch-horizontal">
-    <img src="/images/JeremyLikness.png" alt="Jeremy Likness" class="align-right animated bounceInDown" />
+    <img src="/RebuildWinJSWeb/images/JeremyLikness.png" alt="Jeremy Likness" class="align-right animated bounceInDown" />
     <div class="animated bounceInLeft"><strong class="win-type-x-large">Jeremy Likness</strong></div>
     <div class="win-type-large animated bounceInLeft">Principal Consultant</div>
     <p class="spacer-10" />
-    <div class="animated bounceInRight"><a class="win-type-x-large" href="http://www.twitter.com/jeremylikness" target="_blank"><img src="/images/twitter.png" class="v-middle" alt="Twitter" />&nbsp;<span class="v-middle">@JeremyLikness</span></a></div>
+    <div class="animated bounceInRight"><a class="win-type-x-large" href="http://www.twitter.com/jeremylikness" target="_blank"><img src="/RebuildWinJSWeb/images/twitter.png" class="v-middle" alt="Twitter" />&nbsp;<span class="v-middle">@JeremyLikness</span></a></div>
     <p class="spacer-10"/>
     <div class="bar spacer-10 animated wobble"></div>
     <ul class="animated pulse">
