--- a/slides/slide3.html
+++ b/slides/slide3.html
@@ -10,4 +10,4 @@
     </ul>
     <div class="bar spacer-10 animated wobble"></div>
 </div>
-<script src="/js/slide3.js"></script>
+<script src="/RebuildWinJSWeb/js/slide3.js"></script>
