--- a/slides/slide4.html
+++ b/slides/slide4.html
@@ -1,14 +1,14 @@
 ﻿<div class="stretch-horizontal">
     <div class="half-panel">
-        <img class="half animated rotateInDownLeft" src="/images/today/desktop.png"/>
+        <img class="half animated rotateInDownLeft" src="/RebuildWinJSWeb/images/today/desktop.png"/>
     </div>
     <div class="half-panel">
-        <img class="half animated rotateInDownRight" src="/images/today/laptop.png" />
+        <img class="half animated rotateInDownRight" src="/RebuildWinJSWeb/images/today/laptop.png" />
     </div>
     <div class="half-panel">
-        <img class="half animated rotateInUpLeft" src="/images/today/tablet.png" />
+        <img class="half animated rotateInUpLeft" src="/RebuildWinJSWeb/images/today/tablet.png" />
     </div>
     <div class="half-panel">
-        <img class="half animated rotateInUpRight" src="/images/today/phone.png" />        
+        <img class="half animated rotateInUpRight" src="/RebuildWinJSWeb/images/today/phone.png" />        
     </div>
 </div>
