--- a/slides/slide5.html
+++ b/slides/slide5.html
@@ -10,13 +10,13 @@
         <div class="spacer-50"></div>
     </div>
     <div class="third-panel">
-        <img src="/images/updown.png" class="block-center animated fadeInLeft" />
+        <img src="/RebuildWinJSWeb/images/updown.png" class="block-center animated fadeInLeft" />
     </div>
     <div class="third-panel margin-10">
-        <img src="/images/updown.png" class="block-center animated fadeInRight" />
+        <img src="/RebuildWinJSWeb/images/updown.png" class="block-center animated fadeInRight" />
     </div>
     <div class="third-panel margin-10">
-        <img src="/images/updown.png" class="block-center animated fadeInRight" />
+        <img src="/RebuildWinJSWeb/images/updown.png" class="block-center animated fadeInRight" />
     </div>
     <div class="block-center">
             <div class="third-panel purple padding-10 margin-10 animated bounceInUp">
