--- a/slides/slide6.html
+++ b/slides/slide6.html
@@ -10,10 +10,10 @@
         <div class="spacer-50"></div>
     </div>
     <div class="half-panel margin-10">
-        <img src="/images/updown.png" class="block-center animated fadeInLeft"/>
+        <img src="/RebuildWinJSWeb/images/updown.png" class="block-center animated fadeInLeft"/>
     </div>
     <div class="half-panel margin-10">
-        <img src="/images/updown.png" class="block-center animated fadeInRight"/>
+        <img src="/RebuildWinJSWeb/images/updown.png" class="block-center animated fadeInRight"/>
     </div>
     <div class="half-panel purple margin-10 padding-10 animated bounceInUp">
         <div class="spacer-50"></div>
