--- a/slides/slide7.html
+++ b/slides/slide7.html
@@ -8,4 +8,4 @@
     </ul>
     <div class="bar spacer-10 animated wobble"></div>
 </div>
-<script src="/js/slide7.js"></script>
+<script src="/RebuildWinJSWeb/js/slide7.js"></script>
