--- a/slides/slide8.html
+++ b/slides/slide8.html
@@ -11,4 +11,4 @@
     </ul>
     <div class="bar spacer-10 animated wobble"></div>
 </div>
-<script src="/js/slide8.js"></script>
+<script src="/RebuildWinJSWeb/js/slide8.js"></script>
