Make touch-friendly

--- a/pages/itemDetail/itemDetail.html
+++ b/pages/itemDetail/itemDetail.html
@@ -21,10 +21,10 @@
         <section id="mainContent" aria-label="Main content" role="main" class="stretch">
             <div id="slideContainer" tabindex="-1" class="stretch-horizontal"></div>
             <div id="bottomNavigation" class="stretch-horizontal">
-                <button id="previousSlide" class="animated fadeOut"> &lt; </button>
+                <button id="previousSlide" class="animated fadeIn"> &lt; </button>
                 <span class="win-type-small indent-50"><a href="https://github.com/JeremyLikness/RebuildWinJS" target="_blank">https://github.com/JeremyLikness/RebuildWinJS</a>
                 &nbsp;&nbsp;<span id="curSlide"></span></span>   
-                <button id="nextSlide" class="align-right animated fadeOut"> &gt; </button>
+                <button id="nextSlide" class="align-right animated fadeIn"> &gt; </button>
             </div>
             <p class="spacer-10"/>
             <div class="stretch-horizontal">
